--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,8 @@ version = "1.0"
 
 [dependencies.chrono]
 version = "0.4"
+default-features = false
+features = [ "clock" ]
 
 [dependencies.der]
 version = "0.6"
